HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Treatment_Plan__c/fields/Next_FollowUp_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_FollowUp_Date__c</fullName>
    <label>Next FollowUp Date</label>
    <type>Date</type>
</CustomField>