HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Treatment_Plan__c/fields/Treatment_Details__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Details__c</fullName>
    <label>Treatment Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>